# quarks-operator

./: .dockerignore  .drone.yml  .envrc  .gitignore  .gitmodules  .golangci.yml  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile-nobuild  Dockerfile-s390x  Dockerfile.base  Gopkg.toml  Makefile  NOTICE  README.md  WORKSPACE  dev-env-havener.yaml  dev-env-kind.yaml  fake-changes  go.mod  go.sum  main.go  manifest.yml  skaffold.yaml  v3.0.0-29.gcfc1c1f7
cmd/: BUILD.bazel  gen-command-docs.go  root.go  version.go
cmd/cf-operator/: BUILD.bazel  main.go
cmd/internal/: BUILD.bazel  bpm_configs.go  dgather.go  dgather_test.go  instance_group.go  internal_suite_test.go  persist_output.go  root.go  sleep.go  tlogs.go  trender.go  trender_test.go  util.go  varinterpolation.go  version.go  wait.go
cmd/manager/: main.go
e2e/cli/: BUILD.bazel  cli_test.go  suite_test.go  util_bpm_configs_test.go  util_dgather_test.go  util_instance_group_test.go  util_render_template_test.go  util_variable_interpolation_test.go
e2e/kube/: BUILD.bazel  bosh_deployment_test.go  bosh_link_entangled_pods_test.go  cpu_mem_test.go  examples_count_test.go  examples_test.go  multiple_namespace_test.go  quarks_link_native_consumers_test.go  quarks_link_native_provider_test.go  quarks_restart_test.go  suite_test.go  terminationgraceperiod_test.go  upgrade_test.go
e2e/kube/e2ehelper/: e2e_helper.go
e2e/kube/storage/: examples_storage_test.go  storage_suite_test.go  suite_test.go
e2e/kube/upgrade/: suite_test.go  upgrade_test.go
integration/: BUILD.bazel  bdpl_update_test.go  bosh_links_test.go  boshdns_test.go  deploy_test.go  drain_test.go  extended_job_test.go  extended_secret_test.go  extended_statefulset_test.go  integration_suite_test.go  job_test.go  lifecycle_test.go  quarks_link_entangled_pod_test.go  quarks_link_from_bosh_test.go  quarks_link_from_bosh_to_native_test.go  quarks_link_from_native_to_bosh_test.go  quarks_link_restart_test.go  quarks_secret_rotation_test.go  quarks_secret_test.go  quarks_statefulset_active_passive_test.go  quarks_statefulset_test.go  status_test.go  suite_test.go  versionedsecret_test.go  waitservice_test.go
integration/environment/: BUILD.bazel  catalog.go  environment.go  instance_group.go  logs.go  machine.go  machine_bdv1.go  machine_ejv1.go  machine_esecv1.go  machine_esv1.go  machine_instance_group.go  machine_qsecv1.go  machine_qsv1.go  namespace.go  operator.go  quarks.go  quarks_job_cmd.go  quarks_secret_cmd.go  quarks_statefulset_cmd.go  service.go  teardown.go  util_cmds.go
integration/machinery/: machinery.go
integration/storage/: deploy_with_storage_test.go  extended_statefulset_with_storage_test.go  quarks_statefulset_with_storage_test.go  storage_suite_test.go  suite_test.go
integration/util/: logger.go  randomstring.go  suite_test.go  tlogs_test.go  util_suite_test.go
pkg/bosh/bpm/: BUILD.bazel  config.go  config_test.go  suite_test.go
pkg/bosh/manifest/: BUILD.bazel  addon_placement.go  addon_placement_test.go  apply_update_block.go  bpm_secret_info.go  cmd_instance_group_resolver.go  cmd_instance_group_resolver_test.go  cmd_interpolate.go  cmd_interpolate_test.go  cmd_render_job_tmpls.go  cmd_render_job_tmpls_test.go  container_factory.go  container_factory_test.go  containerization.go  containerization_test.go  data_gatherer.go  data_gatherer_test.go  desired_manifest.go  disk.go  dns.go  dns_test.go  docker_image.go  instance_group.go  instance_group_resolver.go  instance_group_resolver_test.go  interpolate.go  interpolator.go  interpolator_test.go  job.go  job_factory.go  job_factory_test.go  job_provider_links.go  job_spec.go  job_spec_test.go  kube_converter.go  kube_converter_test.go  kube_resources.go  kube_resources_test.go  lookup.go  manifest.go  (+10 more)
pkg/bosh/manifest/containerization/: containerization.go
pkg/bosh/manifest/fakes/: BUILD.bazel  desired_manifest.go  interpolator.go  release_image_provider.go  resolver.go
pkg/bosh/manifest/interpolator/: interpolator.go  interpolator_suite_test.go  interpolator_test.go
pkg/bosh/manifest/manifestfakes/: fake_resolver.go
pkg/credsgen/in_memory_generator/: BUILD.bazel  certificate.go  certificate_test.go  in_memory_generator.go  in_memory_generator_test.go  password.go  password_test.go  rsa_key.go  rsa_key_test.go  ssh_key.go  ssh_key_test.go  suite_test.go
pkg/kube/apis/: BUILD.bazel  apis.go
pkg/kube/config/: BUILD.bazel  checker.go  checker_test.go  getter.go  getter_test.go  suite_test.go
pkg/kube/config/fake/: fake_clientconfig.go
pkg/kube/config/fakes/: fake_clientconfig.go
pkg/kube/controllers/: BUILD.bazel  controller.go  controllers.go  controllers_test.go  webhook_configuration.go
pkg/kube/controllers/boshdeployment/: BUILD.bazel  bpm_controller.go  bpm_reconciler.go  bpm_reconciler_test.go  controller.go  deployment_controller.go  deployment_reconciler.go  deployment_reconciler_test.go  generated_variable_controller.go  generated_variable_reconciler.go  generated_variable_reconciler_test.go  link_infos.go  link_provider.go  (+13 more)
pkg/kube/operator/: BUILD.bazel  operator.go  operator_test.go  suite_test.go
pkg/testhelper/: BUILD.bazel  fake_client_call_queue.go  logger.go  randomstring.go  test_helper.go  wait_for_port.go
testing/: BUILD.bazel  catalog.go  catalog_bdv1.go  catalog_ejv1.go  catalog_esecv1.go  catalog_esv1.go  catalog_native.go  catalog_qsecv1.go  catalog_qstsv1.go  cert_verify.go  command_helper.go  command_helper_esv1.go  dump_env.sh  kubectl_helper.go  logger.go  pretty_print.go  randomstring.go
testing/assets/: gatherManifest.yml  ig-resolved.app-autoscaler.yml  ig-resolved.mysql-v1.yml  ig-resolved.redis.yml  manifest.yaml  templateRenderManifest.yml  templateRenderManifestNoAZs.yml  templateRenderManifestOneAZ.yml  templateRenderManifestSameAZ.yml
testing/assets/vars/: v1.yaml  v2.yml
testing/boshmanifest/: BUILD.bazel  desired_manifest.go  instance_group_manifest.go  manifests.go  manifests_integration.go  manifests_regressions.go  manifests_unit_only.go
testing/boshreleases/: BUILD.bazel  releases.go
(+725 files in other folders)
