load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["gen-command-docs.go"],
    importpath = "code.cloudfoundry.org/cf-operator/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/internal:go_default_library",
        "@com_github_spf13_cobra//doc:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
