load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bpm_configs.go",
        "dgather.go",
        "root.go",
        "trender.go",
        "util.go",
        "varinterpolation.go",
        "version.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/cmd/internal",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bosh/manifest:go_default_library",
        "//pkg/kube/config:go_default_library",
        "//pkg/kube/operator:go_default_library",
        "//pkg/kube/util/config:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "//version:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/oidc:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/signals:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["internal_suite_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
