load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "cli_test.go",
        "suite_test.go",
        "util_bpm_configs_test.go",
        "util_dgather_test.go",
        "util_render_template_test.go",
        "util_variable_interpolation_test.go",
    ],
    deps = [
        "//pkg/bosh/bpm:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_onsi_gomega//gbytes:go_default_library",
        "@com_github_onsi_gomega//gexec:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
