load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "environment.go",
        "instance_group.go",
        "logs.go",
        "machine.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/integration/environment",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bosh/manifest:go_default_library",
        "//pkg/kube/apis/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedsecret/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/kube/client/clientset/versioned:go_default_library",
        "//pkg/kube/controllers:go_default_library",
        "//pkg/kube/operator:go_default_library",
        "//pkg/kube/util:go_default_library",
        "//pkg/kube/util/config:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "//pkg/kube/util/pod:go_default_library",
        "//pkg/testhelper:go_default_library",
        "//testing:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@io_k8s_api//apps/v1beta1:go_default_library",
        "@io_k8s_api//batch/v1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_client_go//kubernetes:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth/oidc:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/clientcmd:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zaptest/observer:go_default_library",
    ],
)
