load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "logger.go",
        "randomstring.go",
        "test_helper.go",
        "wait_for_port.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/testhelper",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
        "@org_uber_go_zap//zaptest/observer:go_default_library",
    ],
)
