load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "container_factory.go",
        "containerization.go",
        "data_gatherer.go",
        "desired_manifest.go",
        "docker_image.go",
        "instance_group.go",
        "interpolate.go",
        "interpolator.go",
        "job.go",
        "job_factory.go",
        "kube_converter.go",
        "kube_resources.go",
        "manifest.go",
        "render_job_tmpls.go",
        "resolver.go",
        "volume.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/bosh/manifest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bosh/bpm:go_default_library",
        "//pkg/kube/apis:go_default_library",
        "//pkg/kube/apis/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedsecret/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/kube/util:go_default_library",
        "//pkg/kube/util/names:go_default_library",
        "//pkg/kube/util/versionedsecretstore:go_default_library",
        "@com_github_cloudfoundry_bosh_cli//director/template:go_default_library",
        "@com_github_cppforlife_go_patch//patch:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_viovanov_bosh_template_go//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_api//apps/v1beta2:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "container_factory_test.go",
        "containerization_test.go",
        "data_gatherer_test.go",
        "interpolator_test.go",
        "job_factory_test.go",
        "kube_converter_test.go",
        "kube_resources_test.go",
        "manifest_test.go",
        "render_job_tmpls_test.go",
        "resolver_test.go",
        "suite_test.go",
    ],
    data = ["//testing/assets"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/bosh/bpm:go_default_library",
        "//pkg/bosh/manifest/fakes:go_default_library",
        "//pkg/kube/apis/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedsecret/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/testhelper:go_default_library",
        "//testing:go_default_library",
        "//testing/boshreleases:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_onsi_gomega//format:go_default_library",
        "@com_github_onsi_gomega//ghttp:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
