load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "controllers.go",
        "webhook_configuration.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/controllers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/credsgen:go_default_library",
        "//pkg/kube/apis/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedsecret/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/kube/controllers/boshdeployment:go_default_library",
        "//pkg/kube/controllers/extendedjob:go_default_library",
        "//pkg/kube/controllers/extendedsecret:go_default_library",
        "//pkg/kube/controllers/extendedstatefulset:go_default_library",
        "//pkg/kube/util/config:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "controllers_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/credsgen:go_default_library",
        "//pkg/credsgen/fakes:go_default_library",
        "//pkg/kube/controllers/fakes:go_default_library",
        "//pkg/kube/util/config:go_default_library",
        "//testing:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
    ],
)
