load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "desired_manifest.go",
        "interpolator.go",
        "release_image_provider.go",
        "resolver.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/bosh/manifest/fakes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/bosh/manifest:go_default_library",
        "//pkg/kube/apis/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/controllers/boshdeployment:go_default_library",
    ],
)
