load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "extendedstatefulset_controller.go",
        "extendedstatefulset_reconciler.go",
        "pod_mutator.go",
        "pod_webhook.go",
        "statefulset_cleanup_controller.go",
        "statefulset_cleanup_reconciler.go",
        "volumes.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/controllers/extendedstatefulset",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube/apis:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/kube/util/config:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "//pkg/kube/util/names:go_default_library",
        "//pkg/kube/util/owner:go_default_library",
        "//pkg/kube/util/pod:go_default_library",
        "//pkg/kube/util/reference:go_default_library",
        "//pkg/kube/util/versionedsecretstore:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//admissionregistration/v1beta1:go_default_library",
        "@io_k8s_api//apps/v1beta2:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/event:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/predicate:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/runtime/inject:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission/builder:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission/types:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "extendedstatefulset_reconciler_test.go",
        "statefulset_cleanup_reconciler_test.go",
        "suite_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/kube/apis:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/kube/controllers:go_default_library",
        "//pkg/kube/controllers/fakes:go_default_library",
        "//pkg/kube/util:go_default_library",
        "//pkg/kube/util/config:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "//pkg/testhelper:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//apps/v1beta2:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//kubernetes/scheme:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client/fake:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller/controllerutil:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
