load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "manager.go",
        "pod_log_getter.go",
        "query.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/controllers/fakes",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube/apis/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/controllers/extendedjob:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/meta:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_client_go//rest:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/cache:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/webhook/admission/types:go_default_library",
    ],
)
