load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/util/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_afero//:go_default_library"],
)
