load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "context.go",
        "events.go",
        "logging.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/util/ctxlog",
    visibility = ["//visibility:public"],
    deps = [
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_client_go//tools/record:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
