load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["finalizer.go"],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/util/finalizer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube/apis:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
    ],
)
