load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "configmap_references.go",
        "reconciles.go",
        "secret_references.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/util/reference",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube/apis:go_default_library",
        "//pkg/kube/apis/boshdeployment/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedjob/v1alpha1:go_default_library",
        "//pkg/kube/apis/extendedstatefulset/v1alpha1:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "//pkg/kube/util/versionedsecretstore:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
    ],
)
