load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "versioned_secret.go",
        "versioned_secret_store.go",
    ],
    importpath = "code.cloudfoundry.org/cf-operator/pkg/kube/util/versionedsecretstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kube/apis:go_default_library",
        "//pkg/kube/util/ctxlog:go_default_library",
        "//pkg/kube/util/owner:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/labels:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "suite_test.go",
        "versioned_secret_store_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/kube/controllers/fakes:go_default_library",
        "//pkg/kube/util/owner:go_default_library",
        "//testing:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
        "@io_k8s_apimachinery//pkg/types:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
    ],
)
